SouthSeptic Responsive design overflow fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8233,7 +8233,7 @@ p {
       @media only screen and (max-width: 600px) {
         .home__septic--banner {
           float: none;
-          width: 100%;
+          width: 95%;
           height: 500px; } }
     .home__septic--pledge {
       float: left;
